--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -8,18 +8,18 @@ This study aims to identify \gls{snare} proteins in eukaryotic proteomes by filt
 The pipeline generates a list of singlepass proteins with a transmembrane domain close to the C terminal, that are not splice isoforms.
 A previous study predicted 411 tail anchor proteins~\cite{Kalbfleisch2007}.
 
-~\gls{ta} proteins are a topologically distinct class of intracellular proteins defined by their single carboxy-terminal ~\gls{tmd} with a cytosolic facing amino-terminus.
+~\gls{ta} proteins are a topologically distinct class of intracellular proteins defined by their single carboxy-terminal~\gls{tms} with a cytosolic facing amino-terminus.
 ~\gls{ta} proteins are involved in a range of key cellular functions including protein translocation and apoptosis.
-Additionally, within the ~\gls{ta} class of proteins are a set of vesicle fusion proteins called ~\gls{snare} proteins.
-There is biomedical interest in ~\gls{snare} drug delivery mechanisms.
+Additionally, within the~\gls{ta} class of proteins are a set of vesicle fusion proteins called~\gls{snare} proteins.
+There is biomedical interest in~\gls{snare} drug delivery mechanisms.
 ~\gls{snare}s can fuse liposomes containing various drug payloads into the membrane.
 
 The pipeline generates a list of singlepass proteins with a transmembrane domain close to the C terminal, that are not splice isoforms.
-A previous study by Kalbfleisch \textit{et al.} published in Traffic 2007 (8: 1687-1694) predicted 411 tail anchor proteins ~\cite{Kalbfleisch2007}.
+A previous study by Kalbfleisch \textit{et al.} published in Traffic 2007 (8: 1687-1694) predicted 411 tail anchor proteins~\cite{Kalbfleisch2007}.
 The tools developed herein are openly available for re-application to other datasets.
-Notably, known ~\gls{snare} transmembrane helices are highly hydrophobic even compared to other ~\gls{ta} transmembrane helices.
-We compare Kyte and Doolittle hydrophobicity profiles of our filtered human protein list against the profiles of previously known ~\gls{snare} and ~\gls{ta} proteins.
-This provided a list of potential ~\gls{snare} proteins in addition to potential spontaneously inserting ~\gls{ta} proteins similar to cytochrome b5 which have the least hydrophobic transmembrane helices.
+Notably, known~\gls{snare} transmembrane helices are highly hydrophobic even compared to other~\gls{ta} transmembrane helices.
+We compare Kyte and Doolittle hydrophobicity profiles of our filtered human protein list against the profiles of previously known~\gls{snare} and~\gls{ta} proteins.
+This provided a list of potential~\gls{snare} proteins in addition to potential spontaneously inserting~\gls{ta} proteins similar to cytochrome b5 which have the least hydrophobic transmembrane helices.
 
 Tail-anchored proteins are a topologically distinct class of intracellular proteins defined by their single carboxy-terminal transmembrane domain with a cytosolic-facing amino-terminus.
 %Need a figure here of a crystal structure TA.
@@ -60,15 +60,15 @@ The idea that \gls{snare} proteins are modular and capable of spontaneous insert
 \subsection{SNAREs are consistently more hydrophobic across the entire \gls{tmh}}
 % Average lines for figure, table for stats
 
-Previously, two datasets of experimentally validated tail anchors and ~\gls{snare}s were gathered from the literature and databases.
+Previously, two datasets of experimentally validated tail anchors and~\gls{snare}s were gathered from the literature and databases.
 ~\gls{snare} proteins were noted to have more of the most hydrophobic amino acids than the general population of tail anchors~\cite{Kalbfleisch2007}.
-We exploit the difference by mapping the hydrophobicity of the transmembrane domains from a novel list of potential ~\gls{ta} proteins generated in this study onto the experimentally validated ~\gls{ta} hydrophobicity plot compiled by Kalbfleisch et al. published in Traffic 2007 (8: 1687-1694) (Figure 3).
-This method has revealed potential ~\gls{ta} ~\gls{snare}s with ~\gls{snare} motif domains that may not appear in conventional screening.
+We exploit the difference by mapping the hydrophobicity of the transmembrane domains from a novel list of potential~\gls{ta} proteins generated in this study onto the experimentally validated~\gls{ta} hydrophobicity plot compiled by Kalbfleisch et al. published in Traffic 2007 (8: 1687-1694) (Figure 3).
+This method has revealed potential~\gls{ta}~\gls{snare}s with~\gls{snare} motif domains that may not appear in conventional screening.
 
 \subsection{Spontaneous insertion may be achieved by polar patches in the \gls{tmh}}
 %Spont TA lines against background dataset.
 
-In addition, predicted insertion machinery dependent TAs with TMHs that are more polar on average than spontaneously inserting ~\gls{ta} protein cytochrome b5 have been highlighted.
+In addition, predicted insertion machinery dependent TAs with TMHs that are more polar on average than spontaneously inserting~\gls{ta} protein cytochrome b5 have been highlighted.
 
 \section{Methods}
 
@@ -78,9 +78,9 @@ Steps carried out by Kalbfleisch \textit{et al.} published in Traffic 2007 (8: 1
 \subsubsection{Swiss-Prot Tail Anchored Dataset According to Filters}
 There were 557012 protein records downloaded from Swiss-Prot via UniProt~\cite{TheUniProtConsortium2014} (Downloaded 24--04--2018).
 106149~\gls{tmh}s (\url{TRANSMEM} annotation) were found between 76953 records (\url{annotation:(type:transmem) AND reviewed:no}).
-This keyword is contained in a record according to either experimental evidence ~\cite{TheUniProtConsortium2014} or a robust meta-analysis of~\gls{tmh} prediction using TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004,Kall2007} and the hydrophobic moment plot method of Eisenberg and co-workers~\cite{Eisenberg1984}.
+This keyword is contained in a record according to either experimental evidence~\cite{TheUniProtConsortium2014} or a robust meta-analysis of~\gls{tmh} prediction using TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004,Kall2007} and the hydrophobic moment plot method of Eisenberg and co-workers~\cite{Eisenberg1984}.
 11141 of those records had only a single~\gls{tmh}.
-11110 of those ~gls{tmh}s were within the length thresholds of 16 to 30 residues (None of those had the annotation for splice isoforms according to \url{NON_TER} annotation).
+11110 of those~gls{tmh}s were within the length thresholds of 16 to 30 residues (None of those had the annotation for splice isoforms according to \url{NON_TER} annotation).
 5548 of those had had no~\gls{sp} annotation (\url{SIGNAL}).
 4332 of those had annotation (based on \url{TOPO_DOM} annotation) that the N terminal was cytoplasmic.
 615 of those had the~\gls{tmh} within 25 residues of the C terminal, the same threshold used by Kalbfleisch and their coworkers~\cite{Kalbfleisch2007}.
@@ -109,9 +109,7 @@ No further filters were applied to this list.
 
 
 \subsubsection{Remapping Previous Dataset}
-195 proteins of the 411 predicted proteins from the previous study were successfully mapped using the UniProt mapping tools~\cite{TheUniProtConsortium2014}.
-Duplicate IDs from the previously predicted ~\gls{ta} protein were removed from the set.
-The remaining dataset contained XXX proteins.
+189 of the 411 proteins from the previous study were successfully mapped to 222 UniProtKB IDs using the UniProt mapping tools with the RefSeq Protein to UniProtKB option~\cite{TheUniProtConsortium2014}.
 
 \subsection{Calculating Hydrophobicity}
 Windowed hydrophobicity was calculated using a window length of 5 residues, and half windows were permitted.
